fix: display whitespace correctly

--- a/client/interface/terminal-custom.css
+++ b/client/interface/terminal-custom.css
@@ -38,6 +38,7 @@
   padding-right: 0.5rem;
   scrollbar-width: thin;
   scrollbar-color: var(--secondary-color) transparent;
+  white-space: pre-wrap;
 }
 
 .story-text::-webkit-scrollbar {
